--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,20 @@
 Package: michelRodange
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Title: The works (in Luxembourguish) of Michel Rodange
+Version: 1.0.0
+Author: Bruno André Rodrigues Coelho
+Maintainer: Bruno André Rodrigues Coelho <bruno@brodrigues.co>
+Description: Michel Rodange was a Luxembourguish writer and poet who lived in the 19th century. 
+    His most notable work is "Renert oder de Fuuß am Frack an a Ma'nsgrëßt", but he also wrote
+    many more works, including "D'Léierchen - Dem Léiweckerche säi Lidd" and 
+    "Dem Grow Sigfrid seng Goldkuommer". This package contains three datasets, each made from the
+    plain text versions of this works available on 
+    https://data.public.lu/fr/datasets/the-works-in-luxembourguish-of-michel-rodange/.
 License: CC0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Imports: 
     magrittr
+Depends:
+    R (>= 2.10)
