--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: michelRodange
 Type: Package
-Title: The works (in Luxembourguish) of Michel Rodange
+Title: The Works (in Luxembourguish) of Michel Rodange
 Version: 1.0.0
 Author: Bruno André Rodrigues Coelho
 Maintainer: Bruno André Rodrigues Coelho <bruno@brodrigues.co>
